--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,4 @@
+{% load static %}
 <header class="header">
   <!-- Main Navbar-->
   <nav class="navbar navbar-expand-lg">
@@ -20,7 +21,7 @@
     <div class="container">
       <!-- Navbar Brand -->
       <div class="navbar-header d-flex align-items-center justify-content-between">
-        <!-- Navbar Brand --><a href="/" class="navbar-brand">CodeThemAll</a>
+        <!-- Navbar Brand --><a href="/" class="navbar-brand"><img src="{%static 'img/signs.png' %}" alt="Kiwi standing on oval"></a>
         <!-- Toggle Button-->
         <button type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-controls="navbarcollapse"
           aria-expanded="false" aria-label="Toggle navigation"
