post comment responsive design

--- a/post/templates/templates/post.html
+++ b/post/templates/templates/post.html
@@ -78,7 +78,7 @@
   <div class="row">
     <div class="post blog-post col-lg-5 " style=" margin-left:auto; margin-right: auto;">  
 
-    <div class="post-single">
+    <div class="post-single" style="padding-left:15px;padding-right:15px">
       <div class="post-details">
             <!-- Display all the Comments -->
             <div class="post-comments">
