--- a/post/templates/templates/post.html
+++ b/post/templates/templates/post.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="row">
     <!-- Post -->
-    <main class="post blog-post col-lg-10" style="margin:auto;">
+    <main class="post blog-post col-lg-10" style="margin:auto; padding-bottom: 0;">
       <div class="container">
         <div class="post-single">
           <div class="post-thumbnail"><img src="{{ post.cover.url }}" alt="..." class="img-fluid"></div>
@@ -76,7 +76,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="post blog-post col-lg-5 " style=" margin-left:auto; margin-right: auto;">  
+    <div class="post blog-post col-lg-5 " style=" margin-left:auto; margin-right: auto; ">  
 
     <div class="post-single" style="padding-left:15px;padding-right:15px">
       <div class="post-details">
