adding title and subscribe to newsletter

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html style="scroll-behavior: smooth;">
-{% include "head.html" %}
+{% include "head.html" with title=title %}
 
 <body>
     {%include "header.html"%}
