--- a/templates/head.html
+++ b/templates/head.html
@@ -1,9 +1,15 @@
-
 {% load static %}
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CodeThemAll - Let's code everything</title>
+    {% if title %}
+        <title>{{title}}</title>
+    {% else %}
+        <title>Let's Code Everything.</title>
+    {% endif %}
+    <!-- add icon link -->
+    <link rel="icon" href="{%static 'img/signs.png' %}" type="image/x-icon">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -25,8 +31,8 @@
     <link rel="shortcut icon" href="favicon.png">
 
     <link href="{% static 'css/github.css' %}" rel="stylesheet">
-    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
+    <!-- Tweaks for older IEs-->
+    <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-  </head>
-  
+</head>
