--- a/templates/index.html
+++ b/templates/index.html
@@ -158,9 +158,11 @@
           </div>
           <div class="col-md-8">
             <div class="form-holder">
-              <form action="#">
+              <form action="." method="POST">
+                {% csrf_token %}
                 <div class="form-group">
-                  <input type="email" name="email" id="email" placeholder="Type your email address">
+                  <!-- <input type="email" name="email" id="email" placeholder="Type your email address"> -->
+                  {{form}}
                   <button type="submit" class="submit">Subscribe</button>
                 </div>
               </form>
