--- a/templates/header.html
+++ b/templates/header.html
@@ -41,7 +41,7 @@
 
           </li>
           {% else %}
-          <li class="nav-item"><a href="{% url 'post_create' %}" class="nav-link ">Create</a>
+          <li class="nav-item"><a href="{% url 'post_template_picker' %}" class="nav-link ">Create</a>
           <li class="nav-item"><a href="{% url 'signout-url' %}" class="nav-link ">Logout</a>
           <li class="nav-item"><a href="{% url 'post_list' %}" class="nav-link"><i class="fa fa-user"
                 aria-hidden="true"></i></a>
