--- a/post/templates/templates/post.html
+++ b/post/templates/templates/post.html
@@ -4,6 +4,7 @@
 
 <div class="container">
   <div class="row">
+
     <!-- Post -->
     <main class="post blog-post col-lg-10" style="margin:auto; padding-bottom: 0;">
       <div class="container">
@@ -18,9 +19,20 @@
               </div>
               {% if post.author.email == request.user.email %}
 
-              <div >
-                <button type="button" class="btn btn-dark"><a style="color:white"  href="{% url 'post_update' slug=post.slug %}">Update</a></button>
-                <button type="button" class="btn btn-dark"><a style="color:white" href="{% url 'post_delete' slug=post.slug %}">Delete</a></button>
+              <div>
+                <script>
+                  function onDeletePostClick() {
+                    if (confirm("Are you sure you want to delete this Post?")) {
+                      txt = "You pressed OK!";
+                      window.location.href = "{% url 'post_delete' slug=post.slug %}";
+                    } else {
+                      txt = "You pressed Cancel!";
+                    }
+                  }                  
+                </script>
+                <button type="button" class="btn btn-dark"><a style="color:white"
+                    href="{% url 'post_update' slug=post.slug %}">Update</a></button>
+                <button type="button" class="btn btn-dark" onclick="onDeletePostClick()"><a style="color:white">Delete</a></button>
               </div>
               {% endif %}
             </div>
@@ -76,63 +88,63 @@
 
 <div class="container">
   <div class="row">
-    <div class="post blog-post col-lg-5 " style=" margin-left:auto; margin-right: auto; ">  
+    <div class="post blog-post col-lg-5 " style=" margin-left:auto; margin-right: auto; ">
 
-    <div class="post-single" style="padding-left:15px;padding-right:15px">
-      <div class="post-details">
-            <!-- Display all the Comments -->
-            <div class="post-comments">
-              <header>
-                <h3 class="h6">Post Comments<span class="no-of-comments">({{post.comment_count}})</span></h3>
-              </header>
-              {% for comment in post.comments %}
-              <div class="comment">
-                <div class="comment-header d-flex justify-content-between">
-                  <div class="user d-flex align-items-center">
-                    {% if comment.is_registered_comment %}
-                    <div class="image"><img src="{{ comment.get_user.avatar.url }}" alt="..."
-                        class="img-fluid rounded-circle"></div>
-                    {% else %}
-                    <div class="image"><img src="{% static 'img/user.svg' %}" alt="..."
+      <div class="post-single" style="padding-left:15px;padding-right:15px">
+        <div class="post-details">
+          <!-- Display all the Comments -->
+          <div class="post-comments">
+            <header>
+              <h3 class="h6">Post Comments<span class="no-of-comments">({{post.comment_count}})</span></h3>
+            </header>
+            {% for comment in post.comments %}
+            <div class="comment">
+              <div class="comment-header d-flex justify-content-between">
+                <div class="user d-flex align-items-center">
+                  {% if comment.is_registered_comment %}
+                  <div class="image"><img src="{{ comment.get_user.avatar.url }}" alt="..."
                       class="img-fluid rounded-circle"></div>
-                    {% endif %}
-                    <div class="title"><strong>{{comment.username}}</strong><span
-                        class="date">{{ comment.modified_timestamp | timesince}} ago </span></div>
+                  {% else %}
+                  <div class="image"><img src="{% static 'img/user.svg' %}" alt="..." class="img-fluid rounded-circle">
                   </div>
-                </div>
-                <div class="comment-body">
-                  <p>{{ comment.content }}</p>
+                  {% endif %}
+                  <div class="title"><strong>{{comment.username}}</strong><span
+                      class="date">{{ comment.modified_timestamp | timesince}} ago </span></div>
                 </div>
               </div>
-              {% endfor %}
-
+              <div class="comment-body">
+                <p>{{ comment.content }}</p>
+              </div>
             </div>
-            <!-- Add a new comment form.  -->
-            <div class="add-comment">
-              <header>
-                <h3 class="h6">Leave a reply</h3>
-              </header>
-              
-              <form method="POST" action="." class="commenting-form">
-                {% csrf_token %}
-                <div class="row">
-                  <div class="form-group col-md-6">
-                    {{form.username}}
-                  </div>
-                  <div class="form-group col-md-6">
-                    {{form.email}}
-                  </div>
-                  <div class="form-group col-md-12">
-                    {{form.content}}
-                  </div>
-                  <div class="form-group col-md-12">
-                    <button type="submit" class="btn btn-secondary">Submit Comment</button>
-                  </div>                  
+            {% endfor %}
+
+          </div>
+          <!-- Add a new comment form.  -->
+          <div class="add-comment">
+            <header>
+              <h3 class="h6">Leave a reply</h3>
+            </header>
+
+            <form method="POST" action="." class="commenting-form">
+              {% csrf_token %}
+              <div class="row">
+                <div class="form-group col-md-6">
+                  {{form.username}}
                 </div>
+                <div class="form-group col-md-6">
+                  {{form.email}}
+                </div>
+                <div class="form-group col-md-12">
+                  {{form.content}}
+                </div>
+                <div class="form-group col-md-12">
+                  <button type="submit" class="btn btn-secondary">Submit Comment</button>
+                </div>
+              </div>
 
-              </form>
-            </div>
-      </div>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
     {% include 'sidebar.html' with latest_posts=latest_posts category_count=category_count %}
