--- a/post/templates/templates/post.html
+++ b/post/templates/templates/post.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static%}
 {% block content%}
-
+<link rel="stylesheet" href="{% static 'css/custom.css' %}">
 <div class="container">
   <div class="row">
 
@@ -30,7 +30,7 @@
                     }
                   }                  
                 </script>
-                <button type="button" class="btn btn-dark"><a style="color:white"
+                <button type="button" class="btn btn-dark" style="border-radius: 30px;"><a style="color:white;" 
                     href="{% url 'post_update' slug=post.slug %}">Update</a></button>
                 <button type="button" class="btn btn-dark" onclick="onDeletePostClick()"><a style="color:white">Delete</a></button>
               </div>
