Adding new template image

--- a/post/templates/templates/post.html
+++ b/post/templates/templates/post.html
@@ -30,9 +30,9 @@
                     }
                   }                  
                 </script>
-                <button type="button" class="btn btn-dark" style="border-radius: 30px;"><a style="color:white;" 
+                <button type="button" class="btn-dark" style="border-radius: 30px;"><a style="color:white;" 
                     href="{% url 'post_update' slug=post.slug %}">Update</a></button>
-                <button type="button" class="btn btn-dark" onclick="onDeletePostClick()"><a style="color:white">Delete</a></button>
+                <button type="button" class="btn-dark" style="border-radius: 30px;" onclick="onDeletePostClick()"><a style="color:white">Delete</a></button>
               </div>
               {% endif %}
             </div>
