fixing latest post and featured posts

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,13 @@
             <div class="text-inner d-flex align-items-center">
               <div class="content">
                 <header class="post-header">
-                  <div class="category"><a href="#">Business</a><a href="#">Technology</a></div><a href="post.html">
+                  <div class="category">
+                    {% for cat in post.categories.all %}
+                    <a href="#">{{cat}}</a>                    
+                    {%endfor%}
+
+                  </div>
+                  <a href="{{post.get_absolute_url}}">
                     <h2 class="h4">{{post.title}}</h2></a>
                 </header>
                 <p>{{post.overview}}</p>
@@ -83,10 +89,15 @@
             <div class="post-details">
               <div class="post-meta d-flex justify-content-between">
                 <div class="date"> {{ post.created_timestamp | timesince }}</div>
-                <div class="category"><a href="#">Business</a></div>
+                <div class="category">
+                  {% for cat in post.categories.all %}
+                  <a href="#">{{cat}}</a>
+
+                  {% endfor %}
+                </div>
               </div><a href="{{post.get_absolute_url}}">
-                <h3 class="h4">Ways to remember your important ideas</h3></a>
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                <h3 class="h4">{{post.title}}</h3></a>
+              <p class="text-muted">{{post.overview}}</p>
             </div>
           </div>
           {% endfor %}
