--- a/templates/footer.html
+++ b/templates/footer.html
@@ -23,19 +23,18 @@
            
           </div>
           <div class="col-md-4">
-            <div class="latest-posts"><a href="#">
+            {% if latest_posts %}
+            <div class="latest-posts">
+              {% for post in latest_posts %}
+              <a href="{{post.get_absolute_url}}">
                 <div class="post d-flex align-items-center">
-                  <div class="image"><img src="{% static 'img/small-thumbnail-1.jpg' %}" alt="..." class="img-fluid"></div>
-                  <div class="title"><strong>Hotels for all budgets</strong><span class="date last-meta">October 26, 2016</span></div>
-                </div></a><a href="#">
-                <div class="post d-flex align-items-center">
-                  <div class="image"><img src="{% static 'img/small-thumbnail-2.jpg' %}" alt="..." class="img-fluid"></div>
-                  <div class="title"><strong>Great street atrs in London</strong><span class="date last-meta">October 26, 2016</span></div>
-                </div></a><a href="#">
-                <div class="post d-flex align-items-center">
-                  <div class="image"><img src="{% static 'img/small-thumbnail-3.jpg' %}" alt="..." class="img-fluid"></div>
-                  <div class="title"><strong>Best coffee shops in Sydney</strong><span class="date last-meta">October 26, 2016</span></div>
-                </div></a></div>
+                  <div class="image"><img src="{{post.thumbnail_small.url}}" alt="..." class="img-fluid"></div>
+                  <div class="title"><strong>{{post.title}}</strong><span class="date last-meta">{{post.created_timestamp | timesince}}</span></div>
+                </div>
+              </a>
+              {% endfor %}
+            </div>
+            {% endif %}
           </div>
         </div>
       </div>
