coloring active tabs

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 {% include "head.html" with title=title %}
 
 <body>
-    {%include "header.html"%}
+    {%include "header.html" with tabName=tabName %}
 
     {%block content%}
     {% endblock content %}
