--- a/static_in_env/css/custom.css
+++ b/static_in_env/css/custom.css
@@ -19,7 +19,13 @@
 .round-border{
     border-radius: 5px;
 }
-
+.highliter{
+    color:rgb(121, 241, 167);
+}
+#active-tab{
+   color:rgb(35, 75, 150); 
+   font-weight: bold;
+}
 img{
     border-radius: 5px;
 }
