--- a/templates/footer.html
+++ b/templates/footer.html
@@ -9,10 +9,10 @@
             <div class="contact-details">
               <p>On Some Server from India</p>
               <p>Phone: (020) 123 456 789</p>
-              <p>Email: <a href="mailto:info@company.com">Info@Company.com</a></p>
+              <p>Email: <a href="helpcodethemall@gmail.com">helpcodethemall@gmail.com</a></p>
               <ul class="social-menu">
                 <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li class="list-inline-item"><a href="https://twitter.com/@codethemall"><i class="fa fa-twitter"></i></a></li>
                 <li class="list-inline-item"><a href="#"><i class="fa fa-instagram"></i></a></li>
                 <li class="list-inline-item"><a href="#"><i class="fa fa-behance"></i></a></li>
                 <li class="list-inline-item"><a href="#"><i class="fa fa-pinterest"></i></a></li>
