--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-7">
-            <h1 style="color:rgb(255, 255, 255)">CodeThenAll - Teach Yourself Programming</h1><a href="#" class="hero-link">Discover More</a>
+            <h1 style="color:rgb(255, 255, 255)">CodeThemAll <br><span class="highliter"> Teach Yourself<br> Programming</span></h1><a href="#" class="hero-link">Discover More</a>
           </div>
         </div><a href=".intro" class="continue link-scroll"><i class="fa fa-long-arrow-down"></i> Scroll Down</a>
       </div>
