--- a/post/templates/templates/post.html
+++ b/post/templates/templates/post.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static%}
 {% block content%}
+<link rel="stylesheet" href="{%static 'css/post_style.css' %}">
 <div class="container">
   <div class="row">
 
