--- a/static_in_env/css/style.default.css
+++ b/static_in_env/css/style.default.css
@@ -827,7 +827,7 @@ section.latest-posts header {
 }
 
 .post p:not(.lead) {
-  font-weight: 400;
+  /* font-weight: 400; */
   color: #777;
   font-size: 0.95em;
 }
