--- a/static_in_env/css/post_style.css
+++ b/static_in_env/css/post_style.css
@@ -39,7 +39,7 @@
 }
 .highlighter{
     /* color:rgb(0, 0, 0); */
-    background-color: khaki;
+    background-color: #FFFF00;
 }
 #post-links{
     color:rgb(0, 140, 255);
