removing span inline block from defautl style css

--- a/static_in_env/css/style.default.css
+++ b/static_in_env/css/style.default.css
@@ -27,10 +27,11 @@ body {
 strong {
   font-weight: 700;
 }
-
+/* Removing the span styles for inline autostyles class */
 a,
-i,
-span {
+i
+/* span  */
+{
   display: inline-block;
   text-decoration: none;
   -webkit-transition: all 0.3s;
